<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/action_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_bookmark_menu"
        app:actionViewClass="androidx.appcompat.widget.ButtonBarLayout"
        app:showAsAction="always"

        >
    </item>



    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/anime_list"
        app:showAsAction="never" >
    </item>

    <item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:title="@string/contact_me"
    app:showAsAction="never">
    </item>



</menu>